# tydust-titus-adventures

./: .gitignore  .mcp.json  ASSET_PIPELINE.md  ASSET_PIPELINE.md.tmp.1112.1768064520876  AUDIOCRAFT_IMPLEMENTATION_NOTES.md  CLAUDE.md  COMPOSITION_NOTES.md  Cargo.toml  GENERATION_EXECUTION_LOG.md  PHASE1_CALM_COMPOSITION.md  PHASE4_AUDIOCRAFT_COMPLETION_REPORT.md  PHASE4_AUDIOCRAFT_GENERATION_LOG.md  README.md  REWORK_SUMMARY.md  SYNTHWAVE_DOCUMENTATION_INDEX.md  SYNTHWAVE_GENERATION_SUMMARY.md  SYNTHWAVE_QUICK_REFERENCE.md  boss_spawn_collide.md  build-windows.sh  generate_synthwave2.py  generate_synthwave2_final.py  generate_synthwave2_hf.py  generate_synthwave2_native.py  generate_synthwave2_quick.py  generate_weapon_sounds.py  industrial-armature.md  level-1-complete-design.md  level-1-design.md  shmup-audio-design.md  split_structures.py  z-layer-guide.md
.github/workflows/: release-linux.yml  release-macos.yml  release-windows.yml
assets/: generation_log.json
assets/backgrounds/: city_skyline_night.yaml
assets/enemies/: enemy_manifest.yaml
assets/level-defs/: level1.yaml  level1_asset_manifest.yaml  level1_flight_log.md  level2.yaml  level3 - Copy.yaml  level3.yaml  (+1 more)
docs/: IMPLEMENTATION_ROADMAP_V4.md  LEVEL3_SECTOR1_RESULT.md  LEVEL3_SECTOR1_WORKFLOW.md  LEVEL_ARCHITECTURE_V4.md  LEVEL_DESIGN_PHILOSOPHY.md  grid_extraction_methodology.md
scripts/: analyze_asset_orientation.py  convert_to_distance.py  generate_asteroid_field.py  generate_enhanced_doodads.py  generate_isometric_train.py  scale_level_yaml.py
src/: main.rs  resources.rs
(+45 files in other folders)
